-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.404 2009-02-05 17:11:57 remko Exp $
-----------------------------------------------------------------------------------------
2009-02-05	pwessel
	* psscale.c:		Did not check if -D was not given, and had wrong test for -E.

2009-02-05	remko
	* gmt_plot.c:		Initialize szProj4[0]=0, to avoid ugly surprises when no
				setting was found.
	* gmt_support.c:	Avoid interpolating hue (converted from RGB) over more than
				180 degrees.
	* ex04/*.cpt:		Added comments and COLOR_MODEL = RGB
	* GMT_drywet.cpt:	Added COLOR_MODEL = RGB
	* pslib.c:		Image placement now in integers. Ensures that placement is
				consistent with e.g. box drawn with the same coordinates.
				Does not produce colormap with number of pixels and colors
				is the same.

2009-02-02	remko
	* minmax.c:		Added -S option to leave space for error bars. Useful with
				-I option and subsequent psxy -E.

2009-01-21	remko
	* psbasemap.{c,txt}:	Erroneously suggested that base was plotted at z=0, instead of
				at the bottom end of the z-axis.

2009-01-20	pwessel
	* mgd77/mgd77manage.c:	Can now request faa to be computed from gobs + eot - ngrav

2009-01-17	jluis
	* ps2raster.c:		Added -W option to help create world files

2009-01-16	pwessel
	* pscoast.c:		Enhanced -D<res>+ where the + lets the application determine the
				next lower resolution should the selected one not be available.
	* gmtselect.c:		Same.
	* grdlandmask.c:	Same.
	* gmt_shore.c:		New public function GMT_shore_adjust_res to handle the above.
	* gmt_proj.c:		Fixed bug in Lambert Conformal Conic for southern hemisphere.
	* explain_-J.txt:	Clarified how to set horizon and standard latitude/scale for -Js

2009-01-15	remko
	* pslib.c:		Fixed minor bug in ps_polygon (missing P in some cases)

2009-01-14	pwessel
	* pslib.c:		Adherence to ancient PS Level 1 caused trouble with max path